# ai-knowledge-assistant

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: settings.py
app/db/: __init__.py  chunk_repository.py  document_repository.py  job_repository.py
app/models/: __init__.py  api.py
app/observability/: __init__.py
app/providers/: embedding.py
app/services/: ask.py  chat.py  chunk.py  embedding.py  ingestion.py  retrieval.py
app/workers/: __init__.py
tests/: test_day03_ingestion.py  test_day04_ask.py  test_day05_streaming.py  test_health.py
